# coffee-table

./: README.md
daemon/: Makefile.am
daemon/http/: Makefile.am  json-formdata.min.js  menu.html  pong.html
daemon/include/: animation.h  border.h  color.h  definition.h  ledMatrix.h  plain.h  plasma.h  pong.h  rainbow.h  serial.h  serial_unix.h  virtsocket.hpp
daemon/src/: Makefile.am  main.cpp  plain.cpp  pong.cpp  serial_unix.cpp  simpleaudio.cpp  tcpsock.cpp  virtsocket.cpp
rasp/: configure.ac
rasp/http/: Makefile.am  header_page.html  index.html  menu.html
rasp/include/: animation.h  border.h  ledMatrix.h  plasma.h  pong.h  rainbow.h  resources.h  serial.h  simpleaudio.hpp  socket.h  socket.hpp  tcpsock.hpp
rasp/src/: Makefile.am  Makefile.in  border.cpp  ledMatrix.cpp  main.cpp  plasma.cpp  pong.cpp  rainbow.cpp  serial.cpp  simpleaudio.cpp  socket.cpp  tcpsock.cpp
table/: table.ino
table-emulator/: constants.h  main.cpp  table-emulator.pro  tablearea.cpp  tablearea.hpp  tableserver.cpp  tableserver.hpp  tablethread.cpp  tablethread.hpp
